--- a/TicTacToe.Api/appsettings.Development.json
+++ b/TicTacToe.Api/appsettings.Development.json
@@ -5,5 +5,8 @@
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; Port=35424; Database=dev; User Id=dev; Password=dev"
   }
 }
