--- a/TicTacToe.Repository/TicTacToe.Repositories.csproj
+++ b/TicTacToe.Repository/TicTacToe.Repositories.csproj
@@ -9,4 +9,12 @@
     <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="5.0.10" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Migrations\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\TicTacToe.Models\TicTacToe.Models.csproj" />
+  </ItemGroup>
+
 </Project>
