--- a/TicTacToe.Api/TicTacToe.Api.csproj
+++ b/TicTacToe.Api/TicTacToe.Api.csproj
@@ -5,6 +5,7 @@
     <UserSecretsId>995a8edf-9d59-4135-abbe-7542e80539e8</UserSecretsId>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
     <DockerComposeProjectPath>..\docker-compose.dcproj</DockerComposeProjectPath>
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
