global exception handler

--- a/TicTacToe.Api/TicTacToe.Api.csproj
+++ b/TicTacToe.Api/TicTacToe.Api.csproj
@@ -34,6 +34,7 @@
     <ProjectReference Include="..\TicTacToe.Models\TicTacToe.Models.csproj" />
     <ProjectReference Include="..\TicTacToe.Repository\TicTacToe.Repositories.csproj" />
     <ProjectReference Include="..\TicTacToe.Services\TicTacToe.Services.csproj" />
+    <ProjectReference Include="..\TicTacToe.Shared\TicTacToe.Shared.csproj" />
   </ItemGroup>
 
 </Project>
