--- a/TicTacToe.Repository/TicTacToe.Repositories.csproj
+++ b/TicTacToe.Repository/TicTacToe.Repositories.csproj
@@ -15,6 +15,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TicTacToe.Models\TicTacToe.Models.csproj" />
+    <ProjectReference Include="..\TicTacToe.Shared\TicTacToe.Shared.csproj" />
   </ItemGroup>
 
 </Project>
