--- a/TicTacToe.Services/TicTacToe.Services.csproj
+++ b/TicTacToe.Services/TicTacToe.Services.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\TicTacToe.Models\TicTacToe.Models.csproj" />
     <ProjectReference Include="..\TicTacToe.Repository\TicTacToe.Repositories.csproj" />
+    <ProjectReference Include="..\TicTacToe.Shared\TicTacToe.Shared.csproj" />
   </ItemGroup>
 
 </Project>
